--- a/src/styles/siteWrapper.scss
+++ b/src/styles/siteWrapper.scss
@@ -1,12 +1,11 @@
 @media only screen and (min-width : 320px) and (max-width : 1199px){
 .siteWrapper{
+    width: 100%;
 
 }
 
 }
 @media only screen and (min-width : 1200px){
-.siteWrapper{
 
-}
 
 }
