--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,6 +4,7 @@
     display: flex;
     background-color: black;
     position: fixed;
+    z-index: 1;
     .logo{
         margin-top: 8px;
         margin-left: 16px;
