--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,8 +1,39 @@
 .content{
 
 }
-.offerSlide{
+.banner{
     width: 320px;
     height: 600px;
-    z-index: auto;
+    .slide1{
+        width: 320px;
+        height: 600px;
+        background-image: url("../assets/img/slider/2.png");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    .slide2{
+        width: 320px;
+        height: 600px;
+        background-image: url("../assets/img/slider/1.png");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    .slide3{
+        width: 320px;
+        height: 600px;
+        background-image: url("../assets/img/slider/3.png");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    .slide4{
+        width: 320px;
+        height: 600px;
+        background-image: url("../assets/img/slider/4.png");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
 }
