--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,39 +1,151 @@
 .content{
+    .banner{
+        width: 320px;
+        height: 600px;
+        .slide1{
+            width: 320px;
+            height: 600px;
+            background-image: url("../assets/img/slider/2.png");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        .slide2{
+            width: 320px;
+            height: 600px;
+            background-image: url("../assets/img/slider/1.png");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        .slide3{
+            width: 320px;
+            height: 600px;
+            background-image: url("../assets/img/slider/3.png");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        .slide4{
+            width: 320px;
+            height: 600px;
+            background-image: url("../assets/img/slider/4.png");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    }
+    .discriptonWrapper{
+        margin-left: 16px;
+        margin-top: 24px;
+        width: 240px;
+        &__text{
+            margin-top: 24px;
+            font-size: 18px;
+            line-height: 23px;
+        }
+    }
+    .categories{
+        margin-left: 16px;
+        margin-top: 24px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-row-gap: 24px;
+        .group{
+            list-style-type:none;
+            margin: 0px;
+            padding: 0px;
+            font-size: 16px;
+            li{
+                a{
+                    color: #4541FE;
+                }
+            }
+        }
+        .group__titles{
+            font-size: 18px;
+            margin-bottom: 12px;
+        }
+    }
+    .item1{
+        background-color: #FFA88C;
+        height: 320px;
+        .item1__text{
+            font-size: 32px;
+            line-height: 41px;
+            text-decoration-line: underline;
+            margin-left: 16px;
+        }
+        .item1__textDescript{
+            font-size: 16px;
+            line-height: 21px;
+            margin-left: 16px;
+        }
+    }
+    .item2{
+        height: 200px;
+        background-color: #7482FF;
+        color: white;
+        .item2__text{
+            font-size: 32px;
+            line-height: 41px;
+            text-decoration-line: underline;
+            margin-left: 16px;
+        }
+        .item2__textDescript{
+            margin-left: 16px;
+            font-size: 16px;
+            line-height: 21px;
+            margin-top: 8px;
+        }
+    }
+    .item3{
+        height: 370px;
+        background-color:#FFE9FD;;
+        .item3__text{
+            font-size: 32px;
+            line-height: 41px;
+            text-decoration-line: underline;
+            margin-left: 16px;
+        }
+        .item3__textDescript{
+            margin-left: 16px;
+            font-size: 16px;
+            line-height: 21px;
+            margin-top: 8px;
+        }
+        .item3__img{
+            height: 240px;
+            background-image: url("../assets/img/sneakers.png");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    }
+    .item4{
+        height: 480px;
+        background-color: #F3F3F3;
+        .item4__text{
+            font-size: 32px;
+            line-height: 41px;
+            text-decoration-line: underline;
+            margin-left: 16px;
+        }
+        .item4__textDescript{
+            margin-left: 16px;
+            font-size: 16px;
+            line-height: 21px;
+            margin-top: 8px;
+        }
+        .item4__img{
+            height: 350px;
+            background-image: url("../assets/img/shoes.png");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    }
 
 }
-.banner{
-    width: 320px;
-    height: 600px;
-    .slide1{
-        width: 320px;
-        height: 600px;
-        background-image: url("../assets/img/slider/2.png");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
-    .slide2{
-        width: 320px;
-        height: 600px;
-        background-image: url("../assets/img/slider/1.png");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
-    .slide3{
-        width: 320px;
-        height: 600px;
-        background-image: url("../assets/img/slider/3.png");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
-    .slide4{
-        width: 320px;
-        height: 600px;
-        background-image: url("../assets/img/slider/4.png");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
-}
+
