--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,3 +1,4 @@
+@media only screen and (max-width : 1199px){
 .navigationWrapper{
     width: 100% ;
     margin: auto;
@@ -41,8 +42,49 @@
         color: white;
     }
 }
-
+}
 @media only screen and (min-width : 1200px){
 
+    .navigationWrapper{
+        display: flex;
+        background: linear-gradient(267.53deg, rgba(0, 0, 0, 0) 0.07%, #0C0C0C 99.93%);
+        position: fixed;
+        z-index: 1;
+        .logo{
+            margin-top: 8px;
+            margin-left: 152px;
+            .logo__text{
+                text-decoration: none;
+                font-size: 24px;
+                line-height: 31px;
+            }
+        }
+        .navigation{
+            display: flex;
+            height: 21px ;
+            margin-top: 13px;
+            margin-left: 42px;
+            .navLink{
+                margin-right: 24px;
+            }
+            .first{
+                margin-left: 0px;
+            }
+        }
+        .cart{
+            margin-left: 370px;
+            margin-top: 16px;
+            display: flex;
+            .cart__counter{
+                
+            }
+            .cart__order{
+                margin-left: 6px;
+            }
+        }
+        a{
+            color: white;
+        }
+    }
     
 }
