--- a/src/styles/siteWrapper.scss
+++ b/src/styles/siteWrapper.scss
@@ -6,6 +6,9 @@
 
 }
 @media only screen and (min-width : 1200px){
-
-
+    .siteWrapper{
+        max-width: 1440px;
+        margin: auto;
+    
+    }
 }
