--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -228,20 +228,28 @@
     .item1{
         background-color: #FFA88C;
         height: 320px;
+        width: 464px;
         .item1__text{
             font-size: 32px;
             line-height: 41px;
             text-decoration-line: underline;
             margin-left: 16px;
+            // padding-top: 24px;
         }
         .item1__textDescript{
             font-size: 16px;
             line-height: 21px;
             margin-left: 16px;
         }
+        .item1__photo1{
+            margin-left: 12px;
+            margin-bottom: 15px;
+        }
     }
     .item2{
-        height: 200px;
+        margin-top: 24px;
+        width: 464px;
+        height: 160px;
         background-color: #7482FF;
         color: white;
         .item2__text{
@@ -257,9 +265,20 @@
             margin-top: 8px;
         }
     }
+    .item1_2wrpaper{
+        display: flex;
+        flex-direction: column;
+    }
+    .item1_2_3wrpaper{
+        display: flex;
+        width: 1136px;
+        margin: auto;
+    }
     .item3{
-        height: 370px;
+        width: 648px;
+        height: 504px;
         background-color:#FFE9FD;;
+        margin-left: 24px;
         .item3__text{
             font-size: 32px;
             line-height: 41px;
@@ -274,14 +293,14 @@
         }
         .item3__img{
             height: 240px;
-            background-image: url("../assets/img/sneakers.png");
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+            padding-bottom: 30px;
         }
     }
     .item4{
+        width: 1136px;
         height: 480px;
+        margin: auto;
+        margin-top: 24px;
         background-color: #F3F3F3;
         .item4__text{
             font-size: 32px;
@@ -297,7 +316,7 @@
         }
         .item4__img{
             height: 350px;
-            background-image: url("../assets/img/shoes.png");
+            background-image: url("../assets/img/descitem4.png");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
