--- a/src/styles/cardProduct.scss
+++ b/src/styles/cardProduct.scss
@@ -1,4 +1,5 @@
 .cardProduct__wrapper{
+    font-family: 'PT Sans', sans-serif;
     padding-right: 16px;
     padding-left: 16px;
     margin-right: auto;
@@ -116,7 +117,7 @@
             line-height: 32px;
         }
         .interesting__slider{
-            .itemCard{
+            .itemCardD{
                 .itemCard__img{
                     width: 240px;
                     height: 240px;
