--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,7 +1,7 @@
-@media (max-width: 1199px) {
 .content{
+    font-family: 'PT Sans', sans-serif;
     .banner{
-        width: 320px;
+        width: 100%;
         height: 600px;
         .slide1{
             width: 320px;
@@ -35,11 +35,24 @@
             background-position: center;
             background-repeat: no-repeat;
         }
+        .slideText{
+            font-weight: bold;
+            font-size: 48px;
+            line-height: 62px;
+            text-decoration-line: underline;
+            margin-top: 90%;
+            margin-left: 16px;
+        }
+        .slideText_light{
+            color: white;
+        }
+
     }
     .discriptonWrapper{
+        display: flex;
+        flex-wrap: wrap;
         margin-left: 16px;
         margin-top: 24px;
-        width: 240px;
         &__text{
             margin-top: 24px;
             font-size: 18px;
@@ -58,6 +71,9 @@
             margin: 0px;
             padding: 0px;
             font-size: 16px;
+            li:not([class]){
+                padding-left: 8px;
+            }
             li{
                 a{
                     color: #4541FE;
@@ -68,6 +84,9 @@
             font-size: 18px;
             margin-bottom: 12px;
         }
+    }
+    .descimg{
+        display: none;
     }
     .item1{
         background-color: #FFA88C;
@@ -82,6 +101,14 @@
             font-size: 16px;
             line-height: 21px;
             margin-left: 16px;
+        }
+        .item1__photo1{
+            width: 100%;
+            height: 240px;
+            background-image: url("../assets/img/item1mob.png");
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
         }
     }
     .item2{
@@ -117,7 +144,8 @@
             margin-top: 8px;
         }
         .item3__img{
-            height: 240px;
+            height: 243px;
+            width: 100%;
             background-image: url("../assets/img/sneakers.png");
             background-size: cover;
             background-position: center;
@@ -148,11 +176,10 @@
         }
     }
 }
-}
+
 @media (min-width: 1200px) {
 .content{
     .banner{
-
         .slide1{
             width: 320px;
             height: 600px;
@@ -184,6 +211,15 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
+        }
+        .slideText{
+            font-weight: bold;
+            font-size: 64px;
+            line-height: 83px;
+            text-decoration-line: underline;
+            width: 1136px;
+            margin: auto;
+            padding-top: 362px;
         }
     }
     .txt{
@@ -226,6 +262,7 @@
         }
     }
     .item1{
+        margin-top: 88px;
         background-color: #FFA88C;
         height: 320px;
         width: 464px;
@@ -234,7 +271,6 @@
             line-height: 41px;
             text-decoration-line: underline;
             margin-left: 16px;
-            // padding-top: 24px;
         }
         .item1__textDescript{
             font-size: 16px;
@@ -242,8 +278,12 @@
             margin-left: 16px;
         }
         .item1__photo1{
-            margin-left: 12px;
-            margin-bottom: 15px;
+            background-image: url(../assets/img/item1.png);
+            padding-left: 16px;
+            // background-size: cover;
+            // background-position: center;
+            // background-repeat: no-repeat;
+            transform: rotate(-7.82deg);
         }
     }
     .item2{
@@ -275,6 +315,7 @@
         margin: auto;
     }
     .item3{
+        margin-top: 88px;
         width: 648px;
         height: 504px;
         background-color:#FFE9FD;;
@@ -292,8 +333,12 @@
             margin-top: 8px;
         }
         .item3__img{
-            height: 240px;
-            padding-bottom: 30px;
+            height: 100%;
+            background-image: url(../assets/img/deskitem3.png);
+            padding-left: 100px;
+        }
+        .descimg{
+            display: block;
         }
     }
     .item4{
