--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -3,6 +3,7 @@
     width: 320px;
     display: flex;
     flex-direction: column;
+    font-family: 'PT Sans', sans-serif;
     .about{
         margin-top: 56px;
         margin-left:16px;
@@ -46,6 +47,7 @@
         width: 1136px;
         margin: auto;
         display: flex;
+        font-family: 'PT Sans', sans-serif;
         .about{
             margin-top: 72px;
             margin-left:16px;
