--- a/src/pages/index.twig
+++ b/src/pages/index.twig
@@ -5,19 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
     <title>Document</title>
 </head>
 <body>
-<div class="siteWrapper">
     <header>
     {% include 'blocks/header.html' %}
     </header>
+    <div class="siteWrapper">
     {% include 'blocks/content.html' %}
+    </div>
     <footer>
     {% include 'blocks/footer.html' %}
     </footer>
     <script src="../scripts/main.js"></script>
-</div>    
+    
 </body>
 </html>
