--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,6 +2,7 @@
 .footerWrapper{
     background-color: black;
     color: white; 
+    font-family: 'PT Sans', sans-serif;
     .footerNav{
         display: flex;
         flex-direction: column;
@@ -76,6 +77,7 @@
     margin-top: 72px;
     background-color: black;
     color: white; 
+    font-family: 'PT Sans', sans-serif;
     .footerNav{
         width: 1136px;
         margin: auto;
@@ -119,6 +121,7 @@
             display: flex;
             .group{
                 margin-top: 32px;
+                margin-left: 36px;
                 .group__titles{
                     margin-left: 16px;
                     font-size: 18px;
