--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "normalize";
 @import "siteWrapper.scss";
 @import "../../node_modules/slick-carousel/slick/slick.css";
+@import "magnific.css";
 @import "header.scss";
 @import "footer.scss";
 @import "content.scss";
@@ -8,3 +9,4 @@
 @import "shoes.scss";
 @import "cardProduct.scss";
 @import "checkout.scss";
+@import "footerLight.scss";
