--- a/src/styles/siteWrapper.scss
+++ b/src/styles/siteWrapper.scss
@@ -1,14 +1,12 @@
-@media only screen and (min-width : 320px) and (max-width : 1199px){
-.siteWrapper{
-    width: 100%;
-
-}
-
-}
-@media only screen and (min-width : 1200px){
-    .siteWrapper{
-        max-width: 1440px;
-        margin: auto;
+// @media only screen and (min-width : 320px){
+//     .siteWrapper{
+//         width: 100%;
+//     }
+// }
+// @media only screen and (min-width : 1200px){
+//     .siteWrapper{
+//         max-width: 1440px;
+//         margin: auto;
     
-    }
-}
+//     }
+// }
