--- a/src/pages/index.twig
+++ b/src/pages/index.twig
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/main.css">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <title>Фетч</title>
 </head>
 <body>
     <header>
